# vulkantesting

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Project.bgp  capt.cap  compile_shaders.cmd  compile_shaders.sh  compile_shaders_citadel.sh  env.sh  env_citadel.sh  gfxreconstruct_env.sh
src/core/: core.cpp  core.h  defs.h  engine.cpp  engine.h  lightweightsemaphore.h  sdl_window.cpp  sdl_window.h
src/log/: log.h
src/log/details/: os.cpp  registry.cpp
src/log/sinks/: basic_file_sink.cpp  wincolor_sink.cpp
src/log/spdlog/: tweakme.h
src/log/spdlog/sinks/: wincolor_sink.h
src/main/: main.cpp
